# eressea-client

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  client.sln  client.vcxproj  client.vcxproj.filters  crdata.c  crdata.h  crfile.c  crfile.h  crjson.c  crjson.h  gettext.h  libs.c  log.c  log.h  mapdata.c  mapdata.h  mapper.c  mapper.cpp  notes.txt  tests.c  viewport.c  viewport.h
.github/workflows/: main.yml
res/: terrains.txt
s/: build
tests/: effects.cr
